<resources>
    <string name="app_name">QuizApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="questions_amount">Questions amount: </string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="start">Start</string>
    <string name="quiz">Quiz</string>
    <string name="_5">5</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="skip">skip</string>
    <string name="share_this_app">Share this app</string>
    <string name="rate_us">Rate us</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="clear_history">Clear history</string>
    <string name="category_mixed">Category: Mixed</string>
    <string name="correct_answers">Correct answers: 8/10</string>
    <string name="difficulty_easy">Difficulty: Easy</string>
    <string name="_12_may_2019_20_32">12 may 2019 20:32</string>
</resources>
