<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.settings.SettingsFragment">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:drawableEnd="@drawable/ic_right"
        android:padding="20dp"
        android:text="@string/share_this_app"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_right"
        android:padding="20dp"
        android:text="@string/rate_us"
        android:textColor="@android:color/black"
        android:textSize="30sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_right"
        android:padding="20dp"
        android:text="@string/leave_feedback"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:drawableEnd="@drawable/ic_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/clear_history"
        android:textColor="@android:color/holo_purple"
        android:textSize="30sp" />

</LinearLayout>