<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/hh_tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_mixed"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/hh_tv_correct_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/correct_answers"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/hh_tv_category"
        app:layout_constraintStart_toStartOf="parent"/>



        <TextView
            android:id="@+id/hh_tv_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/difficulty_easy"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/hh_tv_correct_answers"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/hh_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:text="@string/_12_may_2019_20_32"
            app:layout_constraintTop_toTopOf="@id/hh_tv_difficulty"
            app:layout_constraintStart_toEndOf="@+id/hh_tv_difficulty" />

    </androidx.constraintlayout.widget.ConstraintLayout>

