<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainFragment">


    <ImageView
        android:id="@+id/mf_img_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/mf_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--    <LinearLayout-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/mf_img_view"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        -->
    <!--        android:layout_marginTop="40dp"-->
    <!--        >-->
    <TextView
        android:id="@+id/mf_tv_question_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="30dp"
        android:text="@string/questions_amount"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mf_img_view" />

    <TextView
        android:id="@+id/mf_tv_value_seek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/_5"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/mf_tv_question_amount"
        app:layout_constraintTop_toTopOf="@+id/mf_tv_question_amount" />

    <SeekBar
        android:id="@+id/mf_seek_bar"
        android:layout_width="280dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:max="50"
        android:min="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mf_tv_question_amount" />

    <TextView
        android:id="@+id/mf_tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/category"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/mf_tv_question_amount"
        app:layout_constraintTop_toBottomOf="@+id/mf_seek_bar" />

    <Spinner
        android:id="@+id/mf_spinner_category"
        android:layout_width="280dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="@+id/mf_tv_category"
        app:layout_constraintTop_toBottomOf="@+id/mf_tv_category" />

    <TextView
        android:id="@+id/mf_tv_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/difficulty"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/mf_tv_question_amount"
        app:layout_constraintTop_toBottomOf="@+id/mf_spinner_category" />

    <Spinner
        android:id="@+id/mf_spinner_difficulty"
        android:layout_width="280dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="@+id/mf_tv_category"
        app:layout_constraintTop_toBottomOf="@+id/mf_tv_difficulty" />


    <Button
        android:id="@+id/btn_start"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_button"
        android:text="@string/start"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mf_spinner_difficulty" />

</androidx.constraintlayout.widget.ConstraintLayout>